syntax = "proto3";

option csharp_namespace = "GrpcOrdering";
import "google/protobuf/any.proto";
package Ordering.Common;

message GrpcEmptyRequest {
}
message GrpcByIdRequest {
    string Id = 1;
}
message GrpcBySlugRequest {
    string Slug = 1;
}
message GrpcPagingRequest {
    int32 PageNumber = 1;
    int32 PageSize = 2;
}
message GrpcPagingBySlugRequest {
    int32 PageNumber = 1;
    int32 PageSize = 2;
    string Slug = 3;
}

message BaseGrpcResponse{
	string Success = 1;
	string Message = 2;
}
message BaseGrpcResponseWithData {
  BaseGrpcResponse base_response = 1;
  google.protobuf.Any data = 2;
}

